# CellViz

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  board_8cpp.html  board_8h.html  board_8h_source.html  cells_8cpp.html  cells_8h.html  cells_8h_source.html  cellviz_8cpp.html  cellviz_8h.html  cellviz_8h_source.html  classBasicLife-members.html  classBasicLife.html  classBoard-members.html  classBoard.html  classCellularAutomaton-members.html  classCellularAutomaton.html  classContinuousAutomaton-members.html  classContinuousAutomaton.html  classDiscreteAutomaton-members.html  classDiscreteAutomaton.html  classParticleLife-members.html  classParticleLife.html  classRainbowVisualiser-members.html  classRainbowVisualiser.html  classSmithLife-members.html  classSmithLife.html  classVisualiser-members.html  classVisualiser.html  classes.html  data_8cpp.html  data_8h.html  data_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  fetch__intraday_8cpp.html  files.html  functions.html  (+17 more)
.github/workflows/: ci-windows.yml  ci.yml
demo/: runner.sh
html/: annotated.html  board_8cpp.html  board_8h.html  board_8h_source.html  cells_8cpp.html  cells_8h.html  cells_8h_source.html  cellviz_8cpp.html  cellviz_8h.html  cellviz_8h_source.html  class_basic_life-members.html  class_basic_life.html  class_board-members.html  class_board.html  class_cellular_automaton-members.html  class_cellular_automaton.html  class_continuous_automaton-members.html  class_continuous_automaton.html  class_discrete_automaton-members.html  class_discrete_automaton.html  class_particle_life-members.html  class_particle_life.html  class_rainbow_visualiser-members.html  class_rainbow_visualiser.html  class_smith_life-members.html  class_smith_life.html  class_visualiser-members.html  class_visualiser.html  classes.html  data_8cpp.html  data_8h.html  data_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  fetch__intraday_8cpp.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  (+14 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+27 more)
latex/: annotated.tex  board_8cpp.tex  board_8h.tex  board_8h_source.tex  cells_8cpp.tex  cells_8h.tex  cells_8h_source.tex  cellviz_8cpp.tex  cellviz_8h.tex  cellviz_8h_source.tex  class_basic_life.eps  class_basic_life.tex  class_board.tex  class_cellular_automaton.eps  class_cellular_automaton.tex  class_continuous_automaton.eps  class_continuous_automaton.tex  class_discrete_automaton.eps  class_discrete_automaton.tex  class_particle_life.eps  class_particle_life.tex  class_rainbow_visualiser.eps  class_rainbow_visualiser.tex  class_smith_life.eps  class_smith_life.tex  class_visualiser.eps  class_visualiser.tex  data_8cpp.tex  data_8h.tex  data_8h_source.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  fetch__intraday_8cpp.tex  files.tex  hierarchy.tex  index.tex  md__r_e_a_d_m_e.tex  refman.tex  struct_color_tuple.tex  visualizer_8cpp.tex  visualizer_8h.tex  (+1 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_10.js  (+31 more)
src/: Makefile  board.cpp  board.h  cells.cpp  cells.h  cellviz.cpp  cellviz.h  data  data.cpp  data.h  fetch  fetch.cpp  fetch_intraday  fetch_intraday.cpp  fetch_intraday_data  movies.json  output.json  show_data.json  visualizer.cpp  visualizer.h
src/visualiser/: visualiser.cpp
tests/: tests.cpp
